[tool.poetry]
name = "tnarik_pymaven"
version = "0.1.0"
description = ""
authors = ["tnarik <tnarik@lecafeautomatique.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.7.0"
lxml = ">=4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
